--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.properties.hibernate.format_sql=true
 server.error.include-stacktrace = never
 
 spring.flyway.baseline-on-migrate=true
+
+api.security.token.secret=${JWT_SECRET:12345678}
