--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ server.error.include-stacktrace = never
 
 spring.flyway.baseline-on-migrate=true
 
-api.security.token.secret=${JWT_SECRET:12345678}
+api.security.token.secret=${JWT_SECRET:123456}
