--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-stacktrace = never
 
-spring.flyway.baseline-on-migrate=true
-
-api.security.token.secret=${JWT_SECRET:12345678}
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -18,3 +14,6 @@ spring.jpa.defer-datasource-initialization=true
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#Tempo de sessao da votacao
+tempo.sessao.votacao.segundos=60
