--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/desafio_tecnico
+spring.datasource.url=jdbc:mysql://localhost/assembleia
 spring.datasource.username=root
 spring.datasource.password=12345678
 
